--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,13 +4,5 @@
   <LinkTo @route="about" class="button">About Us</LinkTo>
 </Jumbo>
 
-<div class="rentals">
-  <ul class="results">
-    {{#each @model as |property|}}
-    <li>
-      <Rental @rental={{property}} />
-    </li>
-    {{/each}}
-  </ul>
-</div>
+<Rentals @rentals={{@model}} />
 
